# Documet_Split

./: .env.example  .gitignore  AI_OPTIONS.md  README.md  config.yaml  install_dependencies.sh  pyproject.toml  raw_example.json  requirements.txt
aws_test_results/: packet_01.raw.split_plan.json  packet_02.raw.split_plan.json  packet_03.raw.split_plan.json  packet_04.raw.split_plan.json  packet_05.raw.split_plan.json  packet_06.raw.split_plan.json  packet_07.raw.split_plan.json  packet_08.raw.split_plan.json  packet_09.raw.split_plan.json  packet_10.raw.split_plan.json  packet_11.raw.split_plan.json  packet_12.raw.split_plan.json  packet_13.raw.split_plan.json  packet_14.raw.split_plan.json  packet_15.raw.split_plan.json  packet_16.raw.split_plan.json  packet_17.raw.split_plan.json  packet_18.raw.split_plan.json  packet_19.raw.split_plan.json  packet_20.raw.split_plan.json
aws_test_results/packet_01/: document_001_invoice.pages_1-2.json  document_002_contract.pages_3-5.json  document_003_receipt.pages_6-6.json
aws_test_results/packet_02/: document_001_bank_statement.pages_1-2.json  document_002_bank_statement.pages_3-4.json  document_003_utility_bill.pages_5-6.json
docusplit/: __init__.py  aws_cli.py  aws_splitter.py  classifier.py  cli.py  config.py  detector.py  evaluate_synthetic_splits.py  extractor.py  models.py  organizer.py  policy_codes.py  synthetic_case3.py  utils.py
scripts/: aws_split.py  test_llm_gateway.py  textract_json_to_pdf.py
tests/: test_aws_splitter.py  test_docusplit.py  test_splitters.py  test_textract_output.py
(+59 files in other folders)
